# vigil

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.html  vigil.toml.example
.github/workflows/: release.yml
bench/: real_corpus.sh
rules/: default.toml
samples/: advanced_obfuscated.js  bypass_redteam.js  bypass_test.js  decoder_and_c2_rules.js  evasion_hardening.js  guarddog_ported.js  key_theft_evasion.js  malicious.js  package.json  teampcp_sim.js  test.ts
src/: index.css  lib.rs  main.rs
src/components/: RuleCard.tsx  Sidebar.tsx  ui-kit.tsx
src/config/: mod.rs
src/data/: rules.ts
src/deobfuscator/: constants.rs  control_flow.rs  eval_unwrap.rs  mod.rs  strings.rs
src/engine/: matcher.rs  mod.rs
src/manifest/: mod.rs
src/monitor/: mod.rs  registry.rs
src/pages/: Home.tsx
src/parser/: mod.rs
src/report/: mod.rs
src/rules/: builtin.rs  mod.rs
src/scanner/: mod.rs
src/sections/: Footer.tsx  Guide.tsx  Hero.tsx  Reference.tsx  RulesBrowser.tsx  Scoring.tsx
src/webhook/: mod.rs
tests/: accuracy.rs
