[package]
name = "ankh"
version = "0.3.0"
edition = "2021"
description = "Ankh — Supply chain attack detector with rules-based scanning and advanced JavaScript deobfuscation"

[dependencies]
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
colored = "2"
regex = "1"
serde_json = "1"
rayon = "1.10"
glob = "0.3"
