[package]
name = "vigil"
version = "0.3.0"
edition = "2021"
description = "Vigil — Supply chain attack detector with deobfuscation-first static analysis for JavaScript/npm"

[dependencies]
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
colored = "2"
regex = "1"
serde_json = "1"
rayon = "1.10"
glob = "0.3"
# monitor + webhooks
notify = "6"
ureq = { version = "2", features = ["json", "tls"] }
flate2 = "1"
tar = "0.4"
